added local storage support

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
         <p id="third">Click the "X" to remove the item from your list.</p>
       </div>
 
-      <div class="add-item">
+      <form class="add-item">
         <input
           id="user-input"
           type="text"
           placeholder="New item..."
-          maxlength="27"
+          maxlength="50"
+          required
         />
         <button id="enter">✔</button>
-      </div>
+      </form>
 
       <!-- Empty List -->
       <div class="list-items">
